Bug 282811 - Active Web Browser: error feedback on load failure
Summary: Active Web Browser: error feedback on load failure
Status: RESOLVED FIXED
Alias: None
Product: Active
Classification: Unmaintained
Component: Applications (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: unscheduled
Assignee: active
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-09-26 15:07 UTC by Aaron J. Seigo
Modified: 2011-09-26 23:46 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Aaron J. Seigo 2011-09-26 15:07:24 UTC
Version:           unspecified
OS:                Linux

When typing in an incorrect URL, nothing happens.

Reproducible: Didn't try

Steps to Reproduce:
Enter a wrong URL (e.g. http://nowhere.kde.org)


Expected Results:  
Should provide visual feedback to the user such as "non existent location $URL". perhaps can borrow the error page from rekonq or konqueror?
Comment 1 Sebastian Kügler 2011-09-26 23:46:56 UTC
Git commit 19bfd74c1a2f710aab9cd12b81df8807b7c09ed1 by Sebastian Kügler.
Committed on 27/09/2011 at 01:45.
Pushed by sebas into branch 'master'.

Page loading error handling

Displays an HTML page showing the network error.

Kindly borrowed from Rekong / Arora.

BUG:282811

M  +2    -0    applications/webbrowser/src/CMakeLists.txt
A  +127  -0    applications/webbrowser/src/errorhandling.cpp     [License: GPL (v2/3)]
A  +63   -0    applications/webbrowser/src/infopage.html
M  +8    -0    applications/webbrowser/src/kdeclarativewebview.cpp
M  +2    -0    applications/webbrowser/src/kdeclarativewebview.h

http://commits.kde.org/plasma-mobile/19bfd74c1a2f710aab9cd12b81df8807b7c09ed1