Page loading error handling

Displays an HTML page showing the network error.

Kindly borrowed from Rekong / Arora.

BUG:282811